Update 5-3. NEW FIORI 총정리.md

--- a/RAP/5-3. NEW FIORI 총정리.md
+++ b/RAP/5-3. NEW FIORI 총정리.md
@@ -5226,5 +5226,982 @@ sap.ui.define([
 
 - Launchpad 홈 화면의 해당 Group에 추가한 타일이 정상적으로 표시
 <img width="604" height="414" alt="image" src="https://github.com/user-attachments/assets/90280b07-3438-4dc3-962f-2a7e784ce6ab" />
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+# 02/12
+</br>
+
+## < 연습 : Header-Item Read로 읽기 (수정본) >
+- 아이템만 생성하려고 했는데 아이템만 생성하는 코드를 안짜서 생성은 못짰음
+- 라우팅 복습
+- Sort 적용 (테이블에)
+
+<img width="647" height="338" alt="image" src="https://github.com/user-attachments/assets/49608e80-5a6a-4281-8f7f-36d31f11e44a" />
+</br>
+</br>
+
+<img width="673" height="295" alt="image" src="https://github.com/user-attachments/assets/2ec8c1a2-b963-4452-9a63-39ef7ba594fe" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 1) manifest.json
+```json
+// assignment2_1
+
+"routes": [
+{
+  "name": "RouteMain",
+  "pattern": ":?query:",
+  "target": [
+    "TargetMain"
+  ]
+},
+{
+  "name": "RouteCreateItem",
+  "pattern": "CreateItem/{pa1}",
+  "target": [
+    "TargetCreateItem"
+  ]
+}
+],
+"targets": {
+"TargetMain": {
+  "id": "Main",
+  "name": "Main"
+},
+"TargetCreateItem": {
+  "id": "CreateItem",
+  "name": "CreateItem"
+}
+}
+```
+</br>
+</br>
+
+### 2) Main.controller.js
+```java
+// assignment2_1
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("assignment21.controller.Main", {
+        onInit() {
+            this.oInputModel = new JSONModel();
+            this.oHeaderModel = new JSONModel();
+            this.oItemModel = new JSONModel({
+                ItemSet: []
+            });
+            this.getOwnerComponent().setModel(this.oInputModel, "oInputModel");
+            this.getOwnerComponent().setModel(this.oHeaderModel, "oHeaderModel");
+            this.getOwnerComponent().setModel(this.oItemModel, "oItemModel");
+            this.oDataModel = this.getOwnerComponent().getModel();
+
+            this.oDataModel.read("/HeaderSet", {
+                urlParameters: {
+                    "$expand" : "ItemSet",
+                },
+                success: function(oReturn) {
+                    let ItemSet = [];
+                    this.oHeaderModel.setData(oReturn.results);
+                    for(let i=0; i<oReturn.results.length; i++) {
+                        for(let j=0; j<oReturn.results[i].ItemSet.results.length; j++) {
+                            ItemSet.push(oReturn.results[i].ItemSet.results[j]);
+                        }
+                    }
+                    this.oItemModel.setProperty("/ItemSet", ItemSet);
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("Header 조회 실패!");
+                }
+            })
+
+        },
+        onPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            let pa1 = this.getView().byId("idHeaderTable").getSelectedItem().getBindingContext("oHeaderModel").getObject().Carrid;
+            oRouter.navTo("RouteCreateItem", { pa1: pa1 });
+        }
+    });
+});
+```
+</br>
+</br>
+
+### 3) Main.view.xml
+```html
+// assignment2_1
+
+<mvc:View controllerName="assignment21.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <Table id="idHeaderTable"
+                sticky="HeaderToolbar,ColumnHeaders"
+                inset="false"
+                items="{oHeaderModel>/}"
+                selectionChange="onSelectionChange"
+                class="sapFDynamicPageAlignContent"
+                mode="SingleSelectLeft"
+                width="auto"
+                updateFinished="onHeaderUpdateFinished">
+            <headerToolbar>
+                <Toolbar>
+                    <Title text="Header Table" level="H2" />
+                    <Button text="생성" press="onPress"/>
+                </Toolbar>
+            </headerToolbar>
+            <columns>
+                <Column width="12em">
+                    <Text text="Carrid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Carrname" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Currcode" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem>
+                    <cells>
+                        <Text text="{oHeaderModel>Carrid}" />
+                        <Text text="{oHeaderModel>Carrname}" />
+                        <Text text="{oHeaderModel>Currcode}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+        <Toolbar class="sapUiMediumMarginTop" visible="true"/>
+        <Table id="idItemTable"
+                visible="true"
+                sticky="HeaderToolbar,ColumnHeaders"
+                inset="false"
+                items="{oItemModel>/ItemSet}"
+                class="sapFDynamicPageAlignContent"
+                width="auto">
+            <headerToolbar>
+                <Toolbar>
+                    <Title text="Item Table" level="H2" />
+                </Toolbar>
+            </headerToolbar>
+            <columns>
+                <Column width="12em">
+                    <Text text="Carrid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Connid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Cityfrom" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Airpfrom" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Cityto" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Airpto" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem>
+                    <cells>
+                        <Text text="{oItemModel>Carrid}" />
+                        <Text text="{oItemModel>Connid}" />
+                        <Text text="{oItemModel>Cityfrom}" />
+                        <Text text="{oItemModel>Airpfrom}" />
+                        <Text text="{oItemModel>Cityto}" />
+                        <Text text="{oItemModel>Airpto}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+### 4) CreateItem.controller.js
+```java
+// assignment2_1
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("assignment21.controller.Detail", {
+        onInit() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteCreateItem").attachPatternMatched(this._attachPatternMatched, this);
+        },
+        _attachPatternMatched: function(oEvent) {
+            let gv_carrid = oEvent.getParameters().arguments.pa1;
+            let oInputModel = this.getOwnerComponent().getModel("oInputModel");
+            let oHeaderModel = this.getOwnerComponent().getModel("oHeaderModel");
+            let oItemModel = this.getOwnerComponent().getModel("oItemModel");
+            if (!oHeaderModel || !oItemModel) {
+                return;
+            }
+            let oHeaderData = oHeaderModel.getData();
+            let oHeaderRow = oHeaderData.find(function(item) {
+                return item.Carrid === gv_carrid
+            })
+            oInputModel.setData({
+                "Carrid": oHeaderRow.Carrid,
+                "Carrname": oHeaderRow.Carrname,
+                "Currcode": oHeaderRow.Currcode
+            })
+
+            // let oItemData = oItemModel.getProperty("/ItemSet");
+            // let oItemRow = oItemData.find(function(item) {
+            //     return item.Carrid === gv_carrid
+            // })
+            // // filter를 사용하면 gv_carrid와 일치하는 모든 행을 배열로 담음
+            // let oItemRow = oItemData.filter(function(item) {
+            //     return item.Carrid === gv_carrid;
+            // });
+            debugger;
+        },
+        onNavButtonPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteMain");
+        },
+        onSave: function() {
+            let oInputModel = this.getOwnerComponent().getModel("oInputModel");
+            let oItemModel = this.getOwnerComponent().getModel("oItemModel");
+            let oData = oInputModel.getData();
+            let oItem = [];
+            oItem.push({
+                Carrid   : oData.Carrid,      
+                Connid   : oData.Connid,
+                Cityfrom : oData.Cityfrom,
+                Airpfrom : oData.Airpfrom,
+                Cityto   : oData.Cityto,
+                Airpto   : oData.Airpto
+            });
+            // oItemModel.create("/ItemSet", oItem, {
+            //     success: function() {
+            //         sap.m.MessageToast.show("생성 성공!");
+            //     },
+            //     error: function() {
+            //         sap.m.MessageToast.show("생성 실패!");
+            //     }
+            // });
+        }
+    }); 
+});
+```
+</br>
+</br>
+
+### 5) CreateItem.view.xml
+```html
+// assignment2_1
+
+<mvc:View controllerName="assignment21.controller.CreateItem"
+    xmlns:mvc="sap.ui.core.mvc"
+	xmlns:f="sap.ui.layout.form"
+    xmlns="sap.m">
+    <Page id="page2" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <VBox class="sapUiSmallMargin">
+            <f:SimpleForm id="SimpleFormChange1"
+                editable="true"
+                layout="ResponsiveGridLayout"
+                title="Header"
+                labelSpanXL="3"
+                labelSpanL="3"
+                labelSpanM="3"
+                labelSpanS="12"
+                adjustLabelSpan="false"
+                emptySpanXL="4"
+                emptySpanL="4"
+                emptySpanM="4"
+                emptySpanS="0"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1"
+                singleContainerFullSize="false">
+                <f:content>
+                    <Label text="Carrid" />
+                    <Input id="Carrid" value="{oInputModel>/Carrid}" editable="false"/>
+                    <Label text="Carrname" />
+                    <Input id="Carrname" value="{oInputModel>/Carrname}" editable="false"/>
+                    <Label text="Currcode" />
+                    <Input id="Currcode" value="{oInputModel>/Currcode}" editable="false"/>                   
+                </f:content>
+            </f:SimpleForm>
+
+            <f:SimpleForm id="SimpleFormChange2"
+                editable="true"
+                layout="ResponsiveGridLayout"
+                labelSpanXL="3"
+                labelSpanL="3"
+                labelSpanM="3"
+                labelSpanS="12"
+                adjustLabelSpan="false"
+                emptySpanXL="4"
+                emptySpanL="4"
+                emptySpanM="4"
+                emptySpanS="0"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1"
+                singleContainerFullSize="false" >
+                <f:toolbar>
+                    <Toolbar class="sapUiLargeMarginTop">
+                        <Title text="Item" />
+                        <ToolbarSpacer />
+                        <Button text="생성" type="Transparent" press="onSave" />
+                    </Toolbar>
+                </f:toolbar>
+                <f:content>
+                    <Label text="Connid" />
+                    <Input id="Connid" value="{oInputModel>/Connid}" />
+                    <Label text="Cityfrom" />
+                    <Input id="Cityfrom" value="{oInputModel>/Cityfrom}" />
+                    <Label text="Airpfrom" />
+                    <Input id="Airpfrom" value="{oInputModel>/Airpfrom}" />       
+                    <Label text="Cityto" />
+                    <Input id="Cityto" value="{oInputModel>/AirpfCitytorom}" />    
+                    <Label text="Airpto" />
+                    <Input id="Airpto" value="{oInputModel>/Airpto}" />                
+                </f:content>
+            </f:SimpleForm>
+        </VBox>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+
+## < 과제 : Dialog를 이용한 CRUD 프로그램 >
+- 다이얼로그의 요소들에 대해 .byId 로 접근하는 실습
+- 타일 등록 실습
+
+<img width="670" height="408" alt="image" src="https://github.com/user-attachments/assets/06cd67d2-dec9-447e-8673-5abf9fab4f83" />
+
+<img width="940" height="470" alt="image" src="https://github.com/user-attachments/assets/756932e2-ec00-47c5-8e5c-b6072ea031f0" />
+</br>
+</br>
+
+- 결과 화면
+<img width="940" height="437" alt="image" src="https://github.com/user-attachments/assets/bdd23028-8966-425c-9180-b82f6a9ea86a" />
+
+<img width="940" height="309" alt="image" src="https://github.com/user-attachments/assets/f5e30bca-63e7-4c42-8b4e-9d102bee1c34" />
+</br>
+</br>
+</br>
+</br>
+
+### 1) SAP GUI 코드
+- GET_ENTITYSET
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_GET_ENTITYSET
+
+method MEMBERENTITYSET_GET_ENTITYSET.
+  DATA: lr_name  TYPE /iwbep/t_cod_select_options,
+        lr_erdat TYPE /iwbep/t_cod_select_options,
+        lr_aedat TYPE /iwbep/t_cod_select_options.
+
+  LOOP AT it_filter_select_options INTO DATA(ls_filter).
+    CASE ls_filter-property.
+      WHEN 'Name'.
+        APPEND LINES OF ls_filter-select_options TO lr_name.
+      WHEN 'Erdat'.
+        APPEND LINES OF ls_filter-select_options TO lr_erdat.
+      WHEN 'Aedat'.
+        APPEND LINES OF ls_filter-select_options TO lr_aedat.
+    ENDCASE.
+  ENDLOOP.
+
+  SELECT * FROM zn2member_b03
+    INTO CORRESPONDING FIELDS OF TABLE @et_entityset
+    WHERE name  IN @lr_name
+      AND erdat IN @lr_erdat
+      AND aedat IN @lr_aedat.
+
+endmethod.
+```
+- GET_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_GET_ENTITY
+
+  method MEMBERENTITYSET_GET_ENTITY.
+    DATA: ls_data TYPE zn2member_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+    ENDLOOP.
+
+    SELECT SINGLE * FROM zn2member_b03
+      INTO @DATA(ls_ressult)
+      WHERE id = @ls_data-id.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_ressult TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- CREATE_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_CREATE_ENTITY
+
+  method MEMBERENTITYSET_CREATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZGWMEMBER_B03_MPC=>TS_MEMBERENTITY,
+          ls_data TYPE zn2member_b03.
+
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+    ls_data-erdat = sy-datum.
+    ls_data-erzet = sy-uzeit.
+    ls_data-ernam = sy-uname.
+    INSERT zn2member_b03 FROM ls_data.
+    MOVE ls_entity TO er_entity.
+  endmethod.
+```
+- UPDATE_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_UPDATE_ENTITY
+
+  method MEMBERENTITYSET_UPDATE_ENTITY.
+    DATA: ls_data TYPE zn2member_b03,
+          ls_entity TYPE ZCL_ZGWMEMBER_B03_MPC=>TS_MEMBERENTITY.
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+    CHECK sy-subrc = 0.
+
+    SELECT SINGLE * FROM zn2member_b03
+      INTO ls_data
+      WHERE id = ls_entity-id.
+
+    ls_data-name = ls_entity-name.
+    ls_data-age = ls_entity-age.
+    ls_data-aedat = sy-datum.
+    ls_data-aezet = sy-uzeit.
+    ls_data-aenam = sy-uname.
+    UPDATE zn2member_b03 FROM ls_data.
+  endmethod.
+```
+- DELETE_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_DELETE_ENTITY
+
+  method MEMBERENTITYSET_DELETE_ENTITY.
+    DATA: ls_data TYPE zn2member_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+    ENDLOOP.
+
+    DELETE zn2member_b03 FROM ls_data.
+  endmethod.
+```
+</br>
+</br>
+
+### 2) Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+    "sap/ui/model/Sorter"
+], (Controller, JSONModel, Fragment, Filter, FilterOperator, Sorter) => {
+    "use strict";
+
+    return Controller.extend("zuimemberb03.controller.Main", {
+        onInit() {
+            this.oDataModel = this.getOwnerComponent().getModel();
+            this.oInputModel = new JSONModel();
+            this.oMainModel = new JSONModel();
+            this.getView().setModel(this.oInputModel, "oInputModel");
+            this.getView().setModel(this.oMainModel, "oMainModel");
+            this.oDataRead();
+        },
+        FixUTC: function(oDate) {
+            if (!oDate) return null;
+            return new Date(oDate.getTime() - (oDate.getTimezoneOffset() * 60000));
+        },
+        onSearch: function() {
+            this.oDataRead();
+        },
+        oDataRead: function() {
+            let oData = this.oInputModel.getData();
+            let oFilter = [];
+            
+            if(oData.Name) {
+                oFilter.push(new Filter("Name", FilterOperator.Contains, oData.Name));
+            }
+            if(oData.ErdatStart && oData.ErdatEnd) {
+                oFilter.push(new Filter("Erdat", FilterOperator.BT, this.FixUTC(oData.ErdatStart), this.FixUTC(oData.ErdatEnd)));
+            }
+            if(oData.AedatStart && oData.AedatEnd) {
+                oFilter.push(new Filter("Aedat", FilterOperator.BT, this.FixUTC(oData.AedatStart), this.FixUTC(oData.AedatEnd)));
+            }
+
+            this.oDataModel.read("/MemberEntitySet", {          // 화면에 oData 리프레쉬
+                filters: oFilter,
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("read 에러!");
+                }
+            })
+        },
+        formatAge: function(sAge) {
+            if (!sAge) return "";
+            return Number(sAge);
+        },
+        onrowSelectionChange: function(oEvent) {
+            let oRow = oEvent.getParameter("rowContext");
+            if(!oRow) return;
+            let oData = oRow.getObject();
+            // let oData = oEvent.getParameters().rowContext.getObject();
+            let oModel = new JSONModel(oData);  
+             
+            if(this._oDialog) {   
+                this.byId("idCreate").setEnabled(false);
+                this.byId("idUpdate").setEnabled(true);
+                this.byId("idDelete").setEnabled(true);
+                this.byId("idOption").setSelectedKey("Update");
+                this.byId("idId").setEnabled(false);
+                this.byId("idName").setEnabled(true);
+                this.byId("idAge").setEnabled(true);
+
+                this._oDialog.setModel(oModel, "oDialogModel");        
+                this._oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    id: this.getView().getId(),     // 다이얼로그를 현재 뷰의 ID 체계에 편입시켜 this.byId()로 접근 가능하게 만듦
+                    name: "zuimemberb03.view.fragment.oDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    this.byId("idCreate").setEnabled(false);
+                    this.byId("idUpdate").setEnabled(true);
+                    this.byId("idDelete").setEnabled(true);
+                    this.byId("idOption").setSelectedKey("Update");
+                    this.byId("idId").setEnabled(false);
+                    this.byId("idName").setEnabled(true);
+                    this.byId("idAge").setEnabled(true);
+
+                    this._oDialog = oDialog;
+                    this._oDialog.setModel(oModel, "oDialogModel");
+                    this.getView().addDependent(this._oDialog) // 다이얼로그를 현재 뷰에 종속시켜 뷰의 모델(데이터)과 ID 체계를 공유하도록 설정
+                    this._oDialog.open();
+                }.bind(this))
+            }
+        },
+        onCreate: function() {
+            let oModel = new JSONModel();
+
+            if(this._oDialog) { 
+                this.byId("idCreate").setEnabled(true);
+                this.byId("idUpdate").setEnabled(false);
+                this.byId("idDelete").setEnabled(false);
+                this.byId("idOption").setSelectedKey("Create");
+                this.byId("idId").setEnabled(true);
+                this.byId("idName").setEnabled(true);
+                this.byId("idAge").setEnabled(true);
+
+                this._oDialog.setModel(oModel, "oDialogModel");     
+                this._oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    id: this.getView().getId(),     // 다이얼로그를 현재 뷰의 ID 체계에 편입시켜 this.byId()로 접근 가능하게 만듦
+                    name: "zuimemberb03.view.fragment.oDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    this.byId("idCreate").setEnabled(true);
+                    this.byId("idUpdate").setEnabled(false);
+                    this.byId("idDelete").setEnabled(false);
+                    this.byId("idId").setEnabled(true);
+                    this.byId("idName").setEnabled(true);
+                    this.byId("idAge").setEnabled(true);
+                    this.byId("idOption").setSelectedKey("Create");
+
+                    this._oDialog = oDialog;
+                    this._oDialog.setModel(oModel, "oDialogModel");
+                    this.getView().addDependent(this._oDialog) // 다이얼로그를 현재 뷰에 종속시켜 뷰의 모델(데이터)과 ID 체계를 공유하도록 설정
+                    this._oDialog.open();
+                }.bind(this))
+            }
+        },
+        onSelectChange: function() {
+            let oKey = this.byId("idOption").getSelectedKey();
+            
+            if(oKey === "Update") {
+                this.byId("idId").setEnabled(false);
+                this.byId("idName").setEnabled(true);
+                this.byId("idAge").setEnabled(true);
+            }
+            else if(oKey === "Delete") {
+                this.byId("idId").setEnabled(false);
+                this.byId("idName").setEnabled(false);
+                this.byId("idAge").setEnabled(false);
+            }
+        },
+        onSave: function() {
+            let oKey = this.byId("idOption").getSelectedKey();
+            let oModel = this._oDialog.getModel("oDialogModel");
+            let oData = oModel.getData();
+
+            if(oKey === "Create") {
+                let oBody = {
+                    Id: oData.Id,
+                    Name: oData.Name,
+                    Age: oData.Age
+                }
+                this.oDataModel.create("/MemberEntitySet", oBody, {
+                    success: function() {
+                        sap.m.MessageToast.show("Create 성공!");
+                    },
+                    error: function() {
+                        sap.m.MessageToast.show("Create 실패!");
+                    }
+                })
+                this.oDataRead();
+            } 
+            else if(oKey === "Update") {
+                let sPath = this.oDataModel.createKey("/MemberEntitySet", {
+                    Id : oData.Id
+                }) 
+                let oBody = {
+                    Id: oData.Id,
+                    Name: oData.Name,
+                    Age: oData.Age
+                }
+                this.oDataModel.update(sPath, oBody, {
+                    success: function() {
+                        sap.m.MessageToast.show("Update 성공!");
+                    },
+                    error: function() {
+                        sap.m.MessageToast.show("Update 실패!");
+                    }
+                })
+                this.oDataRead();
+            }
+            else if(oKey === "Delete") {
+                let sPath = this.oDataModel.createKey("/MemberEntitySet", {
+                    Id : oData.Id
+                }) 
+                this.oDataModel.remove(sPath, {
+                    success: function() {
+                        sap.m.MessageToast.show("Delete 성공!");
+                    },
+                    error: function() {
+                        sap.m.MessageToast.show("Delete 실패!");
+                    }
+                })
+                this.oDataRead();
+            }
+        },
+        onClose: function() {
+            this._oDialog.close();
+        }
+    });
+});
+```
+</br>
+</br>
+
+### 3) Main.view.xml
+```html
+<mvc:View controllerName="zuimemberb03.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:t="sap.ui.table"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <content>
+            <fb:FilterBar id="filterbar" persistencyKey="myPersKey" useToolbar="false" search=".onSearch" filterChange=".onFilterChange" afterVariantLoad=".onAfterVariantLoad">
+                <fb:filterGroupItems>
+                    <fb:FilterGroupItem name="Name" label="이름" groupName="Group1" visibleInFilterBar="true">
+                        <fb:control>
+                            <Input value="{oInputModel>/Name}"/>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                    <fb:FilterGroupItem name="Erdat" label="생성일" groupName="Group1" visibleInFilterBar="true">
+                        <fb:control>
+                            <DateRangeSelection
+                                id="idErdat"
+                                change="handleChange"
+                                value= "{
+                                    'type': 'sap.ui.model.type.DateInterval',
+                                    'parts': [
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/ErdatStart'
+                                        },
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/ErdatEnd'
+                                        }
+                                    ]
+                                }"/>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                    <fb:FilterGroupItem name="Aedat" label="변경일" groupName="Group1" visibleInFilterBar="true">
+                        <fb:control>
+                            <DateRangeSelection
+                                id="idAedat"
+                                change="handleChange"
+                                value= "{
+                                    'type': 'sap.ui.model.type.DateInterval',
+                                    'parts': [
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/AedatStart'
+                                        },
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/AedatEnd'
+                                        }
+                                    ]
+                                }"/>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                </fb:filterGroupItems>
+            </fb:FilterBar>
+
+            <t:Table id="idTable" 
+                rows="{
+                    path: 'oMainModel>/',
+                    sorter: {
+                        path: 'Id', 
+                        descending: false
+                    }
+                }"
+                selectionMode="Single"
+                rowSelectionChange="onrowSelectionChange"
+                paste="onPaste"
+                selectionBehavior="Row"
+                ariaLabelledBy="title">
+                <t:extension>
+                    <OverflowToolbar style="Clear">
+                        <Title id="title" text="CRUD 프로그램"/>
+                        <Button text="Create" press="onCreate" />
+                    </OverflowToolbar>
+                </t:extension>
+                <t:columns>
+                    <t:Column width="12rem">
+                        <Label text="Id" />
+                        <t:template>
+                            <Text text="{oMainModel>Id}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Name" />
+                        <t:template>
+                            <Text text="{oMainModel>Name}"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Age" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Age',
+                                formatter: '.formatAge'
+                            }"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Ernam" />
+                        <t:template>
+                            <Text text="{oMainModel>Ernam}"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Erdat" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Erdat',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Erzet" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Erzet',
+                                type: 'sap.ui.model.odata.type.Time',
+                                formatOptions: {
+                                    pattern: 'HH:mm:ss'
+                                }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Aenam" />
+                        <t:template>
+                            <Text text="{oMainModel>Aenam}"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Aedat" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Aedat',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Aezet" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Aezet',
+                                type: 'sap.ui.model.odata.type.Time',
+                                formatOptions: {
+                                    pattern: 'HH:mm:ss'
+                                }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </content>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+### 4) oDialog.fragment.xml
+```html
+<c:FragmentDefinition id="idFragment"
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idDialog"
+            title="Details"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <VBox class="sapUiSmallMargin">
+                <f:SimpleForm id="SimpleFormChange354"
+                    editable="true"
+                    layout="ResponsiveGridLayout"
+                    title="Address"
+                    labelSpanXL="3"
+                    labelSpanL="3"
+                    labelSpanM="3"
+                    labelSpanS="12"
+                    adjustLabelSpan="false"
+                    emptySpanXL="4"
+                    emptySpanL="4"
+                    emptySpanM="4"
+                    emptySpanS="0"
+                    columnsXL="1"
+                    columnsL="1"
+                    columnsM="1"
+                    singleContainerFullSize="false" >
+                    <f:content>
+                        <Select id="idOption" change="onSelectChange" >
+                            <items>
+                                <c:Item id="idCreate" text="Create" key="Create" enabled="false" />
+                                <c:Item id="idUpdate" text="Update" key="Update" enabled="true" />
+                                <c:Item id="idDelete" text="Delete" key="Delete" enabled="true" />
+                            </items>
+                        </Select>
+                        <Label text="Id" id="id1"/>
+                        <Input id="idId" value="{oDialogModel>/Id}" enabled="false"/>
+                        <Label text="Name" />
+                        <Input id="idName" value="{oDialogModel>/Name}" enabled="true"/>
+                        <Label text="Age" />
+                        <Input id="idAge" value="{oDialogModel>/Age}" enabled="true"/>
+                    </f:content>
+                </f:SimpleForm>
+            </VBox>
+        </content>
+        <buttons>
+            <Button text="Save" press=".onSave" />
+            <Button text="Close" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+
+</br>
+</br>
+
+### 4) 타일 생성
+- 최초 1회 실행
+  - npm run build
+  - npm run deploy-config
+  - npm run deploy
+- 2번째 배포부터(코드 수정 시)
+  - npm run build
+  - npm run deploy
+ 
+<img width="491" height="245" alt="image" src="https://github.com/user-attachments/assets/a90f0fb1-1133-4424-b63c-e6bdc1b09aa6" />
+</br>
+</br>
+
+- SAP GUI에서 확인 가능
+<img width="345" height="290" alt="image" src="https://github.com/user-attachments/assets/b3d5d0c0-0565-4ac3-b3e2-d15489647623" />
+</br>
+</br>
+
+- 카탈로그 생성
+<img width="648" height="325" alt="image" src="https://github.com/user-attachments/assets/10e89401-feaf-4df4-8813-be12bff47a99" />
+</br>
+</br>
+
+<img width="827" height="228" alt="image" src="https://github.com/user-attachments/assets/91854f33-0d61-4d4a-af22-6edad3f875b5" />
+</br>
+</br>
+
+<img width="726" height="292" alt="image" src="https://github.com/user-attachments/assets/361cee95-eea8-43df-b07e-a3246420cb97" />
+</br>
+</br>
+
+- 타겟 맵핑 생성 후 그룹에 추가
+<img width="864" height="215" alt="image" src="https://github.com/user-attachments/assets/d899f905-2e27-4e58-9650-1929a39bf49e" />
+</br>
+</br>
+
+- 추가 안되면 직접 추가 가능
+<img width="356" height="361" alt="image" src="https://github.com/user-attachments/assets/989e495d-a865-4315-9c82-f611a6fbb517" />
+</br>
+</br>
+
+<img width="1008" height="219" alt="image" src="https://github.com/user-attachments/assets/e8654cc1-cc0e-4134-9ce4-ffd8fc04953f" />
+</br>
+</br>
+</br>
+</br>
 
 
