Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -483,6 +483,8 @@ endmethod.
 
 ### 2) Main.controller.js
 ```java
+// zuimember_b03
+
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
     "sap/ui/model/json/JSONModel",
@@ -695,6 +697,8 @@ sap.ui.define([
 
 ### 3) Main.view.xml
 ```html
+// zuimember_b03
+
 <mvc:View controllerName="zuimemberb03.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:fb="sap.ui.comp.filterbar"
@@ -861,6 +865,8 @@ sap.ui.define([
 
 ### 4) oDialog.fragment.xml
 ```html
+// zuimember_b03
+
 <c:FragmentDefinition id="idFragment"
     xmlns="sap.m" 
     xmlns:f="sap.ui.layout.form"
