Update 5-3. NEW FIORI 총정리.md

--- a/RAP/5-3. NEW FIORI 총정리.md
+++ b/RAP/5-3. NEW FIORI 총정리.md
@@ -5723,6 +5723,8 @@ endmethod.
 
 ### 2) Main.controller.js
 ```java
+// zuimember_b03
+
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
     "sap/ui/model/json/JSONModel",
@@ -5935,6 +5937,8 @@ sap.ui.define([
 
 ### 3) Main.view.xml
 ```html
+// zuimember_b03
+
 <mvc:View controllerName="zuimemberb03.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:fb="sap.ui.comp.filterbar"
@@ -6101,6 +6105,8 @@ sap.ui.define([
 
 ### 4) oDialog.fragment.xml
 ```html
+// zuimember_b03
+
 <c:FragmentDefinition id="idFragment"
     xmlns="sap.m" 
     xmlns:f="sap.ui.layout.form"
