Update 1-11. 프로그래밍 코드 최적화(02.13).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -2,9 +2,37 @@
 </br>
 
 ### 1) Controller 안에서의 this 정리
-- .controller.js 파일 내부에서의 `this` => 현재 View를 제어하고 있는 컨트롤러 자기 자신
-- `this.getView()` => 내(컨트롤러)가 관리하는 현재 화면(View) 가져오기. 특정 화면의 컨트롤 접근할 때 사용.
+</br>
+
+**1) `.controller.js` 파일 내부에서의 `this`**
+- 현재 View를 제어하고 있는 컨트롤러 자기 자신
+
+**2) `this.getView()`**
+- 내(컨트롤러)가 관리하는 현재 화면(View) 가져오기. 특정 화면의 컨트롤 접근할 때 사용.
 ```html
 this.getView().byId("idInput")
 ```
-- success 함수 안에서의 this
+
+**3) success 함수 안에서의 this**
+- 바로 실행되는 함수가 아니라 나중에 서버에서 데이터가 오면 그 때 실행되는 함수
+- 그래서 이 함수가 실행될 때 this가 뭐였는지 잊어버림
+- 해결방안
+```java
+// 1. let that = this => 미리 this를 복사해두기
+let that = this;
+success: function() {
+   that.getView();
+}
+
+// 2. .bind(this) => success 실행 시 this를 강제로 현재 컨트롤러에 묶음
+success: function() {
+   this.getView();
+}.bind(this)
+```
+</br>
+</br>
+
+### 2) getView() vs getOwnerComponent()
+</br>
+
+**1) `this.getView()`**
