--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -32,7 +32,18 @@ success: function() {
 </br>
 </br>
 
-### 2) getView() vs getOwnerComponent()
+### 2) `getView()` vs `getOwnerComponent()`
 </br>
 
 **1) `this.getView()`**
+- 컨트롤러가 관리하는 특정 화면에 접근할 때 사용
+
+**2) `this.getOwnerComponent()`**
+- 프로젝트 전체를 관리하는 Component.js 접근
+- 모델, 라우터 등 접근 가능
+```java
+this.getOwnerComponent().getModel()
+this.getOwnerComponent().getRouter()
+```
+- `this.getView().getRouter()` : View에는 라우터를 직접 가져오는 기능이 없음
+- 다른 View의 컨트롤 접근 불가능 → 모델과 바인딩되지 않은 버튼, 입력창 등은 접근 불가
