Update 1-11. 프로그래밍 코드 최적화(02.13).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -47,3 +47,20 @@ this.getOwnerComponent().getRouter()
 ```
 - `this.getView().getRouter()` : View에는 라우터를 직접 가져오는 기능이 없음
 - 다른 View의 컨트롤 접근 불가능 → 모델과 바인딩되지 않은 버튼, 입력창 등은 접근 불가
+</br>
+</br>
+
+### 3) `ui.table` vs `m.table`
+</br>
+
+**1) `sap.m.Table`**
+- 데이터 양이 아주 많지 않을 때(약 100건 내외) 사용
+- 선택된 행 자체(객체)를 바로 가져옴 (Item 기반 접근)
+</br>
+
+1. `oEvent` 을 활용하는 경우 (이벤트 발생 시)
+</br>
+
+**2) `sap.ui.table.Table`**
+- 대량의 데이터를 다루는 관리자용 화면이나 복잡한 그리드에 사용
+- 몇 번째 줄인지 번호를 먼저 알아내서 데이터를 찾아와야 함(Index 기반 접근)
